<resources>
    <string name="app_name">Capstone</string>
    <string name="close_drawer">Fechar</string>
    <string name="open_drawer">Abrir</string>
    <string name="seleciona_foto">Selecione uma foto</string>
    <string name="erro_seleciona_imagem">Ops, algo deu errado! Tente Novamente</string>
    <string name="erro_nao_selecionou_imagem">Você não selecionou uma imagem</string>
    <string name="editNome">Nome</string>
    <string name="erro_nome_pessoa">O nome da Pessoa não pode ser vazio</string>
    <string name="erro_documento_pessoa">O campo documento não pode estar vazio</string>
    <string name="tituloToolbar">Lista de Ocorrências</string>
    <string name="tituloToolbarDetalhes">Detalhes da Ocorrência</string>
    <string name="texto_botao_atualizar">Atualizar</string>
    <string name="texto_permissao_negada">Permissão Negada!, não será possível escolher uma foto!</string>
    <string name="titulo_dialogo_salvando_foto">Salvando ocorrência...</string>
    <string name="texto_porcentagem_foto_upload">Salvando... </string>
    <string name="hint_natureza">Natureza</string>
    <string name="hint_descricao">Descricao</string>
    <string name="texto_botao_cadastrar">Cadastrar</string>
    <string name="titulo_cadastro_pessoa">Cadastro de Pessoa</string>
    <string name="titulo_documento">Documento</string>
    <string name="radio_cpf">CPF</string>
    <string name="radio_rg">RG</string>
    <string name="radio_cnh">CNH</string>
    <string name="hint_numero_documento">Nº Documento</string>
    <string name="titulo_prisao">Prisão</string>
    <string name="texto_switch_prisao">Indivíduo recolhido a Prisão?</string>
    <string name="titulo_condicao">Condição</string>
    <string name="texto_botao_inserir_pessoa">Inserir</string>
    <string name="texto_data_ocorrencia">Data da ocorrência</string>
    <string name="texto_natureza">Natureza</string>
    <string name="titulo_pessoas">Pessoas</string>
    <string name="carregando_ocorrencias_aguarde">Carregando Ocorrências... Aguarde....</string>
    <string name="texto_nenhuma_ocorrencia">Você não possui nenhuma ocorrência ainda, adicione uma ocorrência clicando no botão + no canto da tela</string>
    <string name="descricao_da_ocorrencia">Descrição da Ocorrência</string>
    <string name="appwidget_text">Ocorrências</string>
    <string name="carregando">Carregando...</string>
    <string name="mensagem_dialog_sem_conexao">Você não possui uma conexão com a internet ativa. Certifique-se de estar conectado ao abrir o aplicativo pela primeira vez e tente novamente!</string>
    <string name="dialog_positive_button">Entendido</string>
    <string name="erro_natureza">Campo natureza precisa ser preenchido</string>
    <string name="erro_campo_descricao">Campo Descrição precisa ser preenchido</string>
    <string name="menu_nav_todas_ocorrencias">Todas Ocorrências</string>
    <string name="menu_nav_favoritos">Favoritos</string>
    <string name="menu_nav_ocorrencias_com_prisao">Ocorrências com prisão</string>
    <string name="menu_nav_pesquisar">Pesquisar</string>
    <string name="menu_nav_procurar_ocorrencia">Procurar Ocorrência</string>
    <string name="content_imagem_ocorrencia">Imagem principal da Ocorrencia</string>
    <string name="content_icone_calendario">Imagem de calendario</string>
    <string name="content_icone_pessoa">Icone de avatar de pessoa</string>
    <string name="content_avatar_usuario_logado">Imagem do avatar do usuario logado</string>
    <string name="content_icone_widget_atualizar">Icone Atualizar</string>
    <string name="content_icone_widget_abrir">icone abrir</string>
    <string name="content_icone_natureza">icone de natureza da ocorrencia</string>
    <string name="content_icone_descricao">icone para descricao da ocorrencia</string>
    <string name="titulo_ocorrencia">Ocorrência</string>
    <string name="hint_data">00/00/0000</string>
    <string name="condicao_autor">Autor</string>
    <string name="condicao_vitima">Vítima</string>
    <string name="condicao_testemunha">Testemunha</string>
    <string name="pasta_fotos_ocorrencias" translatable="false">fotos_ocorrencias</string>
</resources>
