<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_lista_ocorrencias"
            android:icon="@drawable/ic_lista_ocorrencias"
            android:title="@string/menu_nav_todas_ocorrencias" />

        <item
            android:id="@+id/menu_favorito"
            android:icon="@drawable/ic_favorito"
            android:title="@string/menu_nav_favoritos" />

        <item
            android:id="@+id/menu_ocorrencia_prisao"
            android:icon="@drawable/prisoner"
            android:title="@string/menu_nav_ocorrencias_com_prisao" />


    </group>

    <item
        android:id="@+id/submenu_outros"
        android:title="@string/menu_nav_pesquisar">

        <menu>
            <item
                android:id="@+id/menu_procurar"
                android:icon="@drawable/ic_procurar"
                android:title="@string/menu_nav_procurar_ocorrencia" />

        </menu>

    </item>

</menu>