<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:padding="@dimen/default_padding"
            android:text="@string/titulo_ocorrencia"
            android:textColor="@color/textIconsColor"
            android:textSize="@dimen/tamanho_titulo" />

        <ImageView
            android:contentDescription="@string/content_icone_widget_atualizar"
            android:id="@+id/iv_update_collection"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/iv_open_app"
            android:src="@drawable/ic_load" />

        <ImageView
            android:id="@+id/iv_open_app"
            android:contentDescription="@string/content_icone_widget_abrir"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_open" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_collection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/carregando"
        android:textColor="@color/textIconsColor" />

</LinearLayout>