<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.DetalhesOcorrenciaActivity"
    android:background="@color/colorPrimary">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapseLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?android:attr/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/detalhes_imagem_principal"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="pin" />


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                app:cardCornerRadius="@dimen/cantos_bem_arredondados">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/detalhes_icone_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/default_margin"
                        android:padding="@dimen/default_padding"
                        android:src="@drawable/ic_calendar"
                        android:tint="@color/colorAccent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/detalhes_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/tamanho_titulo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/detalhes_icone_data"
                        app:layout_constraintTop_toTopOf="@id/detalhes_icone_data" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/texto_data_ocorrencia"
                        android:textColor="@color/colorSecondaryText"
                        app:layout_constraintStart_toStartOf="@id/detalhes_data"
                        app:layout_constraintTop_toBottomOf="@id/detalhes_data" />


                    <ImageView
                        android:id="@+id/detalhes_icone_natureza"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/default_margin"
                        android:padding="@dimen/default_padding"
                        android:src="@drawable/ic_nat"
                        android:tint="@color/colorAccent"
                        app:layout_constraintStart_toStartOf="@id/detalhes_icone_data"
                        app:layout_constraintTop_toBottomOf="@id/detalhes_icone_data" />

                    <TextView
                        android:id="@+id/detalhe_natureza"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/tamanho_titulo"
                        app:layout_constraintStart_toStartOf="@id/detalhes_data"
                        app:layout_constraintTop_toTopOf="@id/detalhes_icone_natureza" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/texto_natureza"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="@id/detalhe_natureza"
                        app:layout_constraintTop_toBottomOf="@id/detalhe_natureza" />

                    <ImageView
                        android:id="@+id/detalhe_icone_descricao"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/default_margin"
                        android:padding="@dimen/default_padding"
                        android:src="@drawable/ic_descricao"
                        android:tint="@color/colorAccent"
                        app:layout_constraintStart_toStartOf="@id/detalhes_icone_natureza"
                        app:layout_constraintTop_toBottomOf="@id/detalhes_icone_natureza" />

                    <TextView
                        android:id="@+id/detalhe_descricao"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/tamanho_titulo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/detalhe_natureza"
                        app:layout_constraintTop_toTopOf="@id/detalhe_icone_descricao" />

                    <TextView
                        android:id="@+id/detalhe_descricao_texto"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Descrição da Ocorrência"
                        android:textColor="@color/colorSecondaryText"
                        app:layout_constraintStart_toStartOf="@id/detalhe_descricao"
                        app:layout_constraintTop_toBottomOf="@id/detalhe_descricao" />

                </android.support.constraint.ConstraintLayout>


            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/titulo_pessoas"
                android:textColor="@color/textIconsColor"
                android:textSize="@dimen/tamanho_titulo" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                app:cardCornerRadius="@dimen/cantos_bem_arredondados"
                >

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_pessoas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_pessoa" />


            </android.support.v7.widget.CardView>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/detalhe_btn_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_edit"
        app:layout_anchor="@id/appbarLayout"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>